# EasyShare

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/data/: DeviceInfo.cpp  DeviceInfo.h  Message.cpp  Message.h
src/sockio/: BroadCaster.cpp  BroadCaster.h  Client.h  NetConfig.h  PartnerScanner.cpp  PartnerScanner.h  Server.cpp  Server.h
src/ui/: MainAppPage.cpp  MainAppPage.h
src/utils/: StorageUtil.h
